# SPDX-FileCopyrightText: 2023 Hynek Schlawack <hs@ox.cx>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"


[project]
dynamic = ["version", "readme"]
name = "svcs"
description = "A Flexible Service Locator"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Hynek Schlawack", email = "hs@ox.cx" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
keywords = [
  "service locator",
  "dependency injection",
  "inversion of control",
  "flask",
  "starlette",
  "pyramid",
  "fastapi",
  "aiohttp",
]
dependencies = [
  "attrs>=21.3.0", # attrs namespace
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.2.2",
  "sphinx-design",
  "sphinx-copybutton",
  "sphinx-notfound-page",
  "sphinxext-opengraph",
  "myst-parser",
  "furo>=2023.8.17",
  "sybil",
  "pytest",
  "pytest-asyncio",
  "httpx",
  "aiohttp",
  "fastapi",
  "flask",
  "pyramid",
  "starlette",
  "sqlalchemy",
]
tests = ["pytest", "pytest-asyncio", "sybil>=6"]
typing = ["mypy>=1.4", "fastapi", "flask", "starlette", "aiohttp", "pyramid"]
dev = ["svcs[tests,typing]", "tox>4", "tox-uv", "httpx"]

[project.urls]
Changelog = "https://github.com/hynek/svcs/blob/main/CHANGELOG.md"
Documentation = "https://svcs.hynek.me/"
GitHub = "https://github.com/hynek/svcs"
Funding = "https://github.com/sponsors/hynek"
Mastodon = "https://mastodon.social/@hynek"
Twitter = "https://twitter.com/hynek"


[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-after = "<!-- begin logo -->\n"
end-before = "\n<!-- end logo -->"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-after = "<!-- begin pypi -->\n"
end-before = "\n<!-- end pypi -->"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """

## Release Information

"""

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"
start-after = "<!-- changelog follows -->"
pattern = "\n(###.+?\n)## "

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """
---

[Full Changelog →](https://github.com/hynek/svcs/blob/main/CHANGELOG.md)


"""

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-at = "## Credits"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '> \[!(.*)\]'
replacement = '> **\1**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = ']\(\./(.*)\)'
replacement = '](https://github.com/hynek/svcs/blob/main/\1)'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(docs/_static/.*")'
replacement = 'https://raw.githubusercontent.com/hynek/svcs/main/\1"'


[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "once::Warning",
  # pkg_resources.declare_namespace('zope')
  "ignore::DeprecationWarning:pkg_resources",
  "ignore:pkg_resources is deprecated:DeprecationWarning:pyramid.asset",
  # Silence warning that we're testing for but can't capture..
  "ignore: coroutine method 'aclose' of 'TestFlask.test_teardown_warns_on_async_on_close.*:RuntimeWarning:",
  # Bug in Starlette 0.37.2: https://github.com/encode/starlette/discussions/2603
  "ignore:Unclosed <MemoryObject(Send|Receive)Stream>:ResourceWarning:anyio.streams.memory",
]
asyncio_default_fixture_loop_scope = "function"


[tool.coverage.run]
branch = true
parallel = true
source = ["svcs", "tests"]

[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  # Typing-related
  "if TYPE_CHECKING:",
  ": +\\.\\.\\.$",
]


[tool.interrogate]
omit-covered-files = true
verbose = 2
fail-under = 100
whitelist-regex = ["test_.*"]


[tool.mypy]
strict = true
pretty = true

show_error_codes = true
enable_error_code = ["ignore-without-code"]

disallow_any_generics = false

[[tool.mypy.overrides]]
module = "pyramid.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "conftest"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.typing.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "health_check_pyramid"

disallow_untyped_decorators = false


[tool.pyright]
ignore = [
  "conftest.py",
  "docs",
  "src/svcs/pyramid.py",
  # Excluding tests and allowing tests/typing (like in Mypy) doesn't work.
  "tests/*.py",
  "tests/integrations",
  "tests/typing/pyramid.py",
]


[tool.ruff]
src = ["src", "tests", "conftest.py", "docs"]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A001",    # shadowing is fine
  "ANN",     # Mypy is better at this
  "ARG",     # unused arguments are normal when implementing interfaces
  "COM",     # Formatter takes care of our commas
  "D",       # We prefer our own docstring style.
  "E501",    # leave line-length enforcement to formatter
  "FBT",     # we have one function that takes one bool; c'mon!
  "FIX",     # Yes, we want XXX as a marker.
  "INP001",  # sometimes we want Python files outside of packages
  "ISC001",  # conflicts with formatter
  "PLR0913", # yes, many arguments, but most have defaults
  "PYI034",  # We're not adding typing_extensions just for Self.
  "SLF001",  # private members are accessed by friendly functions
  "TC",      # TYPE_CHECKING blocks break autodocs
]

[tool.ruff.lint.per-file-ignores]
"**/test_*" = [
  "EM101",   # no need for exception msg hygiene in tests
  "PLR2004", # numbers are fine in tests
  "PT011",   # broad is fine
  "S101",    # assert
  "SIM300",  # Yoda rocks in asserts
  "TRY002",  # stock exceptions are fine in tests
]

"tests/typing/*" = [
  "F841", # unused variables are fine in type checks
]

"docs/examples/*" = ["PERF203", "BLE001"]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2
known-first-party = [
  "svcs",
  "tests",
  "simple_fastapi_app",
  "simple_starlette_app",
]
